--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Hello World!</h1>
+<html>
+  <body>
+    <style>
+      body {
+        background-image: linear-gradient(to top right,red, yellow, green);;
+      }
+    </style>
+
+    <h1 style="text-align:center;"id="h1">My Website</h1>
+    <p style="text-align:center;"id="p1">Hello, my name is jonathan, and this is my first website.</p>
+    <script>
+      document.getElementById("p1").style.color = "black";
+      document.getElementById("p1").style.fontSize = "30";
+      document.getElementById("h1").style.color = "red";
+      document.getElementById("link").style.color = "red";
+      document.getElementById("link").style.fontSize = "20";
+    </script>
+  </body>
+</html>
