--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<html>
   <body>
     <style>
       body {
@@ -12,8 +13,6 @@
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
       document.getElementById("h1").style.color = "red";
-      document.getElementById("link").style.color = "red";
-      document.getElementById("link").style.fontSize = "20";
     </script>
   </body>
 </html>
