--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <h1 style="text-align:center;"id="h1">My Website</h1>
     <p style="text-align:center;"id="p1">Hello, my name is jonathan, and this is my first website.</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyupNdLcTspNeJiWxy-nM72xNiITUDDNiDcd25OW20Et1FCzS8&s">
     <script>
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
