--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
       body {
         background-image: linear-gradient(to top right,red, yellow, green);;
       }
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
     </style>
+
     <h1 style="text-align:center;"id="h1">My Website</h1>
     <p style="text-align:center;"id="p1">Hello, my name is jonathan, and this is my first website.</p>
+    <img src="https://cdn.pixabay.com/photo/2018/08/24/20/05/ufo-3628773_960_720.png" alt="Space Ship" class="center" width=200>
     <script>
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
       document.getElementById("h1").style.color = "red";
-      document.getElementById("h1").style.fontSize = "100"
     </script>
   </body>
 </html>
