--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
       document.getElementById("h1").style.color = "red";
+      document.getElementById("h1").style.fontSize = "100";
     </script>
   </body>
 </html>
