--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
         margin-left: auto;
         margin-right: auto;
       }
+      img:hover {
+        animation: shake 0.5s;
+        animation-iteration-count: infinite;
+      }
+
+      @keyframes shake {
+        0% { transform: translate(1px, 1px) rotate(0deg); }
+        10% { transform: translate(-1px, -2px) rotate(-1deg); }
+        20% { transform: translate(-3px, 0px) rotate(1deg); }
+        30% { transform: translate(3px, 2px) rotate(0deg); }
+        40% { transform: translate(1px, -1px) rotate(1deg); }
+        50% { transform: translate(-1px, 2px) rotate(-1deg); }
+        60% { transform: translate(-3px, 1px) rotate(0deg); }
+        70% { transform: translate(3px, 1px) rotate(-1deg); }
+        80% { transform: translate(-1px, -1px) rotate(1deg); }
+        90% { transform: translate(1px, 2px) rotate(0deg); }
+        100% { transform: translate(1px, -2px) rotate(-1deg); }
+      }
     </style>
 
     <h1 style="text-align:center;"id="h1">My Website</h1>
@@ -19,7 +37,7 @@
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
       document.getElementById("h1").style.color = "red";
-      document.getElementById("h1").style.fontSize = "75";
+      document.getElementById("h1").style.fontSize = "55";
     </script>
   </body>
 </html>
