--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
       @keyframes shake {
         0% { transform: translate(1px, 1px) rotate(0deg); }
-        10% { transform: translate(-1px, -2px) rotate(-1deg); }
-        20% { transform: translate(-3px, 0px) rotate(1deg); }
-        30% { transform: translate(3px, 2px) rotate(0deg); }
-        40% { transform: translate(1px, -1px) rotate(1deg); }
-        50% { transform: translate(-1px, 2px) rotate(-1deg); }
-        60% { transform: translate(-3px, 1px) rotate(0deg); }
-        70% { transform: translate(3px, 1px) rotate(-1deg); }
-        80% { transform: translate(-1px, -1px) rotate(1deg); }
-        90% { transform: translate(1px, 2px) rotate(0deg); }
-        100% { transform: translate(1px, -2px) rotate(-1deg); }
+        10% { transform: translate(0px, -10px); }
+        20% { transform: translate(0px, -20px); }
+        30% { transform: translate(0px, -30px); }
+        40% { transform: translate(0px, -40px); }
+       // 50% { transform: translate(-1px, 2px); }
+       // 60% { transform: translate(-3px, 1px); }
+       // 70% { transform: translate(3px, 1px); }
+        //80% { transform: translate(-1px, -1px); }
+        //90% { transform: translate(1px, 2px); }
+        //100% { transform: translate(1px, -2px); }
       }
     </style>
 
