--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
       @keyframes shake {
         0% { transform: translate(1px, 1px) rotate(0deg); }
-        10% { transform: translate(0px, -10px); }
-        20% { transform: translate(0px, -20px); }
-        30% { transform: translate(0px, -30px); }
-        40% { transform: translate(0px, -40px); }
+        10% { transform: translate(0px, -10px) rotate(10deg); }
+        20% { transform: translate(0px, -20px) rotate(10deg); }
+        30% { transform: translate(0px, -30px) rotate(10deg); }
+        40% { transform: translate(0px, -40px) rotate(10deg); }
        // 50% { transform: translate(-1px, 2px); }
        // 60% { transform: translate(-3px, 1px); }
        // 70% { transform: translate(3px, 1px); }
