--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
       @keyframes shake {
         0% { transform: translate(0px, 0px) rotate(0deg); }
-        10% { transform: translate(0px, 0px) rotate(36deg); }
-        20% { transform: translate(0px, 0px) rotate(72deg); }
-        30% { transform: translate(0px, 0px) rotate(108deg); }
-        40% { transform: translate(0px, 0px) rotate(144deg); }
-        50% { transform: translate(0px, 0px) rotate(180deg); }
-        60% { transform: translate(0px, 0px) rotate(215deg); }
-        70% { transform: translate(0px, 0px) rotate(252deg); }
-        80% { transform: translate(0px, 0px) rotate(288deg); }
-        90% { transform: translate(0px, 0px) rotate(324deg); }
+        //10% { transform: translate(0px, 0px) rotate(36deg); }
+        //20% { transform: translate(0px, 0px) rotate(72deg); }
+        //30% { transform: translate(0px, 0px) rotate(108deg); }
+        //40% { transform: translate(0px, 0px) rotate(144deg); }
+        //50% { transform: translate(0px, 0px) rotate(180deg); }
+        //60% { transform: translate(0px, 0px) rotate(215deg); }
+        //70% { transform: translate(0px, 0px) rotate(252deg); }
+        //80% { transform: translate(0px, 0px) rotate(288deg); }
+        //90% { transform: translate(0px, 0px) rotate(324deg); }
         100% { transform: translate(0px, 0px) rotate(360deg); }
       }
     </style>
