--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       }
 
       @keyframes shake {
-        0% { transform: translate(0px, 10px) rotate(0deg); }
+        0% { transform: translate(0px, 0px) rotate(0deg); }
         //10% { transform: translate(0px, 0px) rotate(36deg); }
         //20% { transform: translate(0px, 0px) rotate(72deg); }
         //30% { transform: translate(0px, 0px) rotate(108deg); }
         //40% { transform: translate(0px, 0px) rotate(144deg); }
-        50% { transform: translate(0px, 0px) rotate(0deg); }
+        //50% { transform: translate(0px, 0px) rotate(0deg); }
         //60% { transform: translate(0px, 0px) rotate(215deg); }
         //70% { transform: translate(0px, 0px) rotate(252deg); }
         //80% { transform: translate(0px, 0px) rotate(288deg); }
