--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
         margin-left: auto;
         margin-right: auto;
       }
-      img:hover {
+      img:click {
         animation: shake 4s;
         animation-iteration-count: infinite;
       }
 
       @keyframes shake {
         0% { transform: translate(0px, 0px) rotate(0deg); }
-        25% { transform: translate(400px, 0px) rotate(0deg); }
-        50% { transform: translate(0px, 0px) rotate(0deg); }
-        75% { transform: translate(-400px, 0px) rotate(0deg); }
+        20% { transform: translate(200px, 0px) rotate(0deg); }
+        40% { transform: translate(400px, 0px) rotate(0deg); }
+        60% { transform: translate(-200px, 0px) rotate(0deg); }
+        80% { transform: translate(-400px, 0px) rotate(0deg); }
         100% { transform: translate(0px, 0px) rotate(0deg); }
       }
     </style>
