--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         margin-left: auto;
         margin-right: auto;
       }
-      img:click {
+      img:hover {
         animation: shake 4s;
         animation-iteration-count: infinite;
       }
