--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 style="text-align:center;"id="h1">My Website</h1>
     <p style="text-align:center;"id="p1">Hello, my name is jonathan, and this is my first website.</p>
     <img src="https://cdn.pixabay.com/photo/2018/08/24/20/05/ufo-3628773_960_720.png" alt="Space Ship" class="center" width=400>
-    <a href="page2.html">Page 2</a>
+    <a href="Page2.html">Page 2</a>
     <script>
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
