--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         animation: shake 2s;
         animation-iteration-count: infinite;
       }
-
       @keyframes shake {
         0% { transform: translate(0px, 0px) rotate(0deg); }
         100% { transform: translate(0px, 0px) rotate(360deg); }
@@ -22,8 +21,9 @@
     </style>
 
     <h1 style="text-align:center;"id="h1">My Website</h1>
-    <p style="text-align:center;"id="p1">Hello, my name is jonathan, and this is my first website.</p>
+    <p style="text-align:center;"id="p1">Hello</p>
     <img src="https://cdn.pixabay.com/photo/2018/08/24/20/05/ufo-3628773_960_720.png" alt="Space Ship" class="center" width=400>
+    <a href="google.com">google.com</a>
     <script>
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
