--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     <h1 style="text-align:center;"id="h1">My Website</h1>
     <p style="text-align:center;"id="p1">Hello</p>
     <img src="https://cdn.pixabay.com/photo/2018/08/24/20/05/ufo-3628773_960_720.png" alt="Space Ship" class="center" width=400>
-    <a href="https://www.google.com">google.com</a>
+    <a href="https://www.google.com" id="link">google.com</a>
     <script>
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "30";
       document.getElementById("h1").style.color = "red";
       document.getElementById("h1").style.fontSize = "55";
+      document.getElementById("link").style.fontSize = "25"
     </script>
   </body>
 </html>
