--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1 style="text-align:center;"id="h1">My Website</h1>
     <p style="text-align:center;"id="p1">Hello</p>
     <img src="https://cdn.pixabay.com/photo/2018/08/24/20/05/ufo-3628773_960_720.png" alt="Space Ship" class="center" width=400>
-    <center><a href="https://www.google.com" id="link">google.com</a></center>
+    <br><center><a href="https://www.google.com" id="link">google.com</a></center>
     <script>
       document.getElementById("p1").style.color = "black";
       document.getElementById("p1").style.fontSize = "35";
