--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
     <style>
       body {
-        background-image: linear-gradient(to top right,red, yellow, green);
+        background-image: linear-gradient(to top right,red, black,red,black,red,black,red,black,red,black);
         
       }
       img {
@@ -26,14 +26,14 @@
     <h1 style="text-align:center;"id="h1">My Website</h1>
     <p style="text-align:center;"id="p1">Hello</p>
     <img src="https://www.pngarts.com/files/4/Coin-PNG-Picture.png" alt="Coin" class="center" width=300>
-    <br><center><a href="https://www.instagram.com/jonathan_roizz/" id="link">My Instagram</a></center>
+    <br><strong><center><a href="https://www.instagram.com/jonathan_roizz/" id="link">My Instagram</a></center></strong>
     <script>
-      document.getElementById("p1").style.color = "black";
+      document.getElementById("p1").style.color = "white";
       document.getElementById("p1").style.fontSize = "35";
-      document.getElementById("h1").style.color = "red";
+      document.getElementById("h1").style.color = "white";
       document.getElementById("h1").style.fontSize = "55";
       document.getElementById("link").style.fontSize = "30"
-      document.getElementById("link").style.color = "Blue";
+      document.getElementById("link").style.color = "white";
     </script>
   </body>
 </html>
