--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p style="text-align:center;"id="p1">Hello</p>
     <img src="https://www.pngarts.com/files/4/Coin-PNG-Picture.png" alt="Coin" class="center" width=300>
     <br><strong><center><a href="https://www.instagram.com/jonathan_roizz/" id="link">My Instagram</a></center></strong>
-    <a href="https://jonathanroiz.github.io/ChangeBackground/" id="ChangeBackground">Change Background</a>
+    <strong><a href="https://jonathanroiz.github.io/ChangeBackground/" id="ChangeBackground">Change Background</a><strong>
     <script>
       document.getElementById("p1").style.color = "white";
       document.getElementById("p1").style.fontSize = "35";
