--- a/index.html
+++ b/index.html
@@ -1,42 +1,69 @@
+<!DOCTYPE html>
 <html>
-<html>
-  <STYLE>A {text-decoration: none;} </STYLE>
-  <body>
-    <style>
-      body {
-        background-image: linear-gradient(to top right,red, black,red,black,red,black,red,black,red,black);
-        
-      }
-      img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      img:hover {
-        animation: shake 2s;
-        animation-iteration-count: infinite;
-      }
-      @keyframes shake {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(180deg); }
-        100% { transform: rotate(360deg); }
-      }
-    </style>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+.input-container {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.icon {
+  padding: 10px;
+  background: dodgerblue;
+  color: white;
+  min-width: 50px;
+  text-align: center;
+}
+.input-field {
+  width: 100%;
+  padding: 10px;
+  outline: none;
+}
+.input-field:focus {
+  border: 2px solid dodgerblue;
+}
+/* Set a style for the submit button */
+.btn {
+  background-color: dodgerblue;
+  color: white;
+  padding: 15px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+.btn:hover {
+  opacity: 1;
+}
+</style>
+</head>
+<body>
 
-    <h1 style="text-align:center;"id="h1">My Website</h1>
-    <p style="text-align:center;"id="p1">Hello</p>
-    <img src="https://www.pngarts.com/files/4/Coin-PNG-Picture.png" alt="Coin" class="center" width=300>
-    <br><strong><center><a href="https://www.instagram.com/jonathan_roizz/" id="link">My Instagram</a></center></strong>
-    <strong><a href="https://jonathanroiz.github.io/ChangeBackground/" id="ChangeBackground">Change Background</a><strong>
-    <script>
-      document.getElementById("p1").style.color = "white";
-      document.getElementById("p1").style.fontSize = "35";
-      document.getElementById("h1").style.color = "white";
-      document.getElementById("h1").style.fontSize = "55";
-      document.getElementById("link").style.fontSize = "30"
-      document.getElementById("link").style.color = "white";
-      document.getElementById("ChangeBackground").style.fontSize = "30";
-      document.getElementById("ChangeBackground").style.color = "white";
-    </script>
-  </body>
+<form action="/action_page.php" style="max-width:500px;margin:auto">
+  <h2>Register Form</h2>
+  <div class="input-container">
+    <i class="fa fa-user icon"></i>
+    <input class="input-field" type="text" placeholder="Username" name="usrnm">
+  </div>
+
+  <div class="input-container">
+    <i class="fa fa-envelope icon"></i>
+    <input class="input-field" type="text" placeholder="Email" name="email">
+  </div>
+  
+  <div class="input-container">
+    <i class="fa fa-key icon"></i>
+    <input class="input-field" type="password" placeholder="Password" name="psw">
+  </div>
+
+  <button type="submit" class="btn">Register</button>
+</form>
+
+</body>
 </html>
