--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <body>
 
 <form action="/action_page.php" style="max-width:500px;margin:auto">
-  <h2>Register Form</h2>
+  <center><h2>Register Form</h2></center>
   <div class="input-container">
     <i class="fa fa-user icon"></i>
     <input class="input-field" type="text" placeholder="Username" name="usrnm">
