--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
 <body>
 
-<canvas id="myCanvas" width="200" height="100"
-Your browser does not support the canvas element.
-</canvas>
+<canvas id="myCanvas" width="200" height="100"</canvas>
 
 <script>
 var canvas = document.getElementById("myCanvas");
 var ctx = canvas.getContext("2d");
 ctx.beginPath();
-ctx.arc(95,50,40,0,2*Math.PI);
+ctx.arc(95,50,40,10,0,2*Math.PI);
 ctx.stroke();
 </script> 
 
