--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 var canvas = document.getElementById("myCanvas");
 var ctx = canvas.getContext("2d");
 ctx.beginPath();
-ctx.arc(95,50,40,10,0,2*Math.PI);
+ctx.arc(95,50,40,10,0,2);
 ctx.stroke();
 </script> 
 
