--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<script
 function draw() {
   var canvas = document.getElementById('canvas');
   if (canvas.getContext) {
@@ -10,3 +12,5 @@ function draw() {
     ctx.fill();
   }
 }
+</script>
+<html>
