--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<body>
 <script>
 function draw() {
   var canvas = document.getElementById('canvas');
@@ -13,4 +14,5 @@ function draw() {
   }
 }
 </script>
+</body>
 <html>
