--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
 <html>
-<body>
-<script>
-function draw() {
-  var canvas = document.getElementById('canvas');
-  if (canvas.getContext) {
-    var ctx = canvas.getContext('2d');
-
-    ctx.beginPath();
-    ctx.moveTo(75, 50);
-    ctx.lineTo(100, 75);
-    ctx.lineTo(100, 25);
-    ctx.fill();
-  }
-}
-</script>
-</body>
+  <h1>Hello!</h1>
 <html>
