--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <center>
-  <h1>Hello!</h1>
+  <h1 id="Title">Hello!</h1>
   </center>
   
   <script>
-    
+    document.getElementById("Title").fontSize = "50";
   </script>
 <html>
