--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </center>
   
   <script>
-    document.getElementById("Title").fontSize = "50";
+    document.getElementById("Title").style.fontSize = "50";
   </script>
 <html>
