--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   
   <script>
     document.getElementById("Title").style.fontSize = "50";
+    document.getElementById("Title").style.color = "red";
   </script>
 <html>
