--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
     document.getElementById("Title").style.fontSize = "50";
     document.getElementById("Title").style.color = "red";
   </script>
+  <style>
+    background-color: #d24dff;
+  </style>
 <html>
