--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     document.getElementById("Title").style.color = "red";
   </script>
   <style>
-    background-color: #d24dff;
+    background-image: linear-gradient(top right,red,green,red,green);
   </style>
 <html>
