--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     document.getElementById("Title").style.color = "red";
   </script>
   <style>
-    background-image: linear-gradient(top right,red,green,red,green);
+    #grad1 {
+      background-color: red; /* For browsers that do not support gradients */
+      background-image: repeating-linear-gradient(red, yellow 10%, green 20%); /* Standard syntax (must be last) */
+    }
   </style>
 <html>
