--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </script>
   <style>
     #grad1 {
+      height: 200px;
       background-color: red; /* For browsers that do not support gradients */
       background-image: repeating-linear-gradient(red, yellow 10%, green 20%); /* Standard syntax (must be last) */
     }
