--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     document.getElementById("Title").style.color = "red";
   </script>
   <style>
-    #grad1 {
-      height: 200px;
-      background-color: red; /* For browsers that do not support gradients */
-      background-image: repeating-linear-gradient(red, yellow 10%, green 20%); /* Standard syntax (must be last) */
-    }
+    background-image: linear-gradient(red, yellow);
   </style>
 <html>
