--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     document.getElementById("Title").style.fontSize = "50";
     document.getElementById("Title").style.color = "red";
   </script>
+  <head>
   <style>
     background-image: linear-gradient(red, yellow);
   </style>
+  </head>
 <html>
