--- a/index.html
+++ b/index.html
@@ -12,4 +12,7 @@
     background-image: linear-gradient(red, yellow);
   </style>
   </head>
+  <body>
+    <div id="grad1"></div>
+  </body>
 <html>
