--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<html>
-  <center>
-  <h1 id="Title">Hello!</h1>
-  </center>
-  
-  <script>
-    document.getElementById("Title").style.fontSize = "50";
-    document.getElementById("Title").style.color = "red";
-  </script>
-  <style>
-    background-image: linear-gradient(red, yellow);
-  </style>
-  <body>
-    <div id="grad1"></div>
-  </body>
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <title>Alien Invasion</title>
+  <link rel="stylesheet" href="base.css" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+</head>
+<body>
+  <div id='container'>
+    <canvas id='game' width='320' height='480'></canvas>
+  </div>
+  <script src='engine.js'></script>
+  <script src='game.js'></script>
+</body>
+</html>
