--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id='container'>
-    <canvas id='game' width='320' height='480'></canvas>
+    <center><canvas id='game' width='320' height='480'></canvas></center>
   </div>
   <script src='engine.js'></script>
   <script src='game.js'></script>
