--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id='container'>
-    <center><canvas id='game' width='300' height='480'></canvas></center> //width originally 320
+    <center><canvas id='game' width='300' height='480'></canvas></center> <!-- width originally 320 -->
   </div>
   <script src='engine.js'></script>
   <script src='game.js'></script>
