--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <script data-ad-client="ca-pub-4936897515660408" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <style>
-    background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pbs.org%2Fwgbh%2Fnova%2Ftopic%2Fspace%2F&psig=AOvVaw1AOzVMiLKxV1IW09KUuqvW&ust=1575929775250000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOCcvomKp-YCFQAAAAAdAAAAABAD");
+    body {
+      background-image: url("/videotutorials/images/tutor_connect_home.jpg");
+    }
   </style>
 </head>
 <body>
