--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script data-ad-client="ca-pub-4936897515660408" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <style>
     body {
-      background-image: url("/videotutorials/images/tutor_connect_home.jpg");
+      background-image: url("paper.gif");
     }
   </style>
 </head>
