--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <style>
     body {
       background-image: url("https://www.pbs.org/wgbh/nova/media/images/nova-wonders-whats-the-universe-made-of-hero_W.width-800.jpg");
+      background-repeat: no-repeat;
     }
   </style>
 </head>
