--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     body {
       background-image: url("https://www.pbs.org/wgbh/nova/media/images/nova-wonders-whats-the-universe-made-of-hero_W.width-800.jpg");
       background-repeat: no-repeat;
+      background-size: auto;
     }
   </style>
 </head>
