--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script data-ad-client="ca-pub-4936897515660408" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <style>
     body {
-      background-image: url("https://www.pbs.org/wgbh/nova/media/images/nova-wonders-whats-the-universe-made-of-hero_W.width-800.jpg");
+      background-image: url("https://www.sciencealert.com/images/2019-08/processed/stellar-1_1024.jpg");
       background-repeat: no-repeat;
       background-size: 100%;
     }
