--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </style>
 </head>
 <body>
+  <center><a href="https://jonathanroiz.github.io/" style="font-size: 40px; text-decoration: none; color:black;">Home</a></center>
   <div id='container'>
     <center><canvas id='game' width='320' height='480'></canvas></center> <!-- width originally 320 -->
   </div>
